# drought-scope

./: .gitattributes  .gitignore  README.md  Solution.ipynb  drought_scope.pth  pyproject.toml
