[tool.poetry]
name = "imagin-e"
version = "0.1.0"
description = ""
authors = ["Mattia Rigiroli <mattiarigiroli@gmail.com>"]
readme = "README.md"
packages = [{include = "imagin_e"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
torch = "^2.0.1"
torchvision = "^0.15.2"
torchaudio = "^2.0.2"
rasterio = "^1.3.8"
scikit-learn = "1.2.2"
matplotlib = "^3.7.3"
numpy = "1.24.2"
rioxarray = "^0.15.0"
geopandas = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"